@@ -26,6 +26,7 @@
     and TIMESTAMP with an underscore to reduce likelihood of
     collisions with source files on case-insensitive file systems
     like on MacOS (#1753, reported by Kon Lovett).
+  - chicken-install now caches eggs installed from local locations.
 
 - Compiler
   - When emitting types files, the output list is now sorted, to ensure
